tests/typing/fail/array/out_of_bounds_create_arg.act
contract A

constructor(int x, uint[2][3] y)


contract B

constructor()

creates
  A a := new A(-1, [ [1,2], [3,4], [5,6] ])
  uint[2][2] arr := [[0,0],[0,0]]

transition f()

updates
  a := new A(2, [ [1,arr[100][0]], [3,4], [5,6] ])
